--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@
 }
 
 body {
-  font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro",
+  /*font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro",
   "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック体", YuGothic,
-  "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+  "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;*/
   font-size: 15px;
   line-height: 1.8;
   letter-spacing: .8px;
@@ -61,13 +61,15 @@ li {
  文字
 ---------------------------------*/
 .heading-primary {
-  font-family: "Open sans", sans-serif;
+  /*font-family: "Open sans", sans-serif;*/
   font-size: 40px;
   font-weight: normal;
   line-height: 1;
   margin-bottom: 15px;
   letter-spacing: .05em;
 }
+
+
 
 .section-heading {
   margin-bottom: 20px;
@@ -88,15 +90,16 @@ li {
 ---------------------------------*/
 .wrapper {
   padding-top: 68px;
+  font-family: 'Noto Serif JP', serif;
 }
 
 .section {
   padding: 120px 0;
 }
 
-.section:nth-of-type(odd) {
+/*.section:nth-of-type(odd) {
   background-color: #f7f7f7;
-}
+}*/
 
 .inner {
   max-width: 1380px;
@@ -122,7 +125,8 @@ li {
 }
 
 .logo-title {
-  font-family: "Open sans", sans-serif;
+  display: block;
+  /*font-family: "Open sans", sans-serif;*/
   font-size: 64px;
   line-height: 1;
   letter-spacing: .2em;
@@ -157,7 +161,7 @@ li {
 }
 
 .gnav-item {
-  font-family: "Open sans", sans-serif;
+  /*font-family: "Open sans", sans-serif;*/
   font-size: 16px;
   padding: 0 24px;
   letter-spacing: .05em;
@@ -212,6 +216,7 @@ li {
   flex: 0 0 32.31552%;
   margin-right: 1.52671%;
   margin-bottom: 40px;
+  
 }
 
 .works-item:nth-of-type(3n) {
@@ -634,3 +639,12 @@ li {
     padding: 20px 0;
   }
 }
+.fullMoon {
+  background-image: -webkit-linear-gradient(top, #EBEBEB 0%, #DCDDDF 48%, #C4C5C7 99%);
+  background-image: linear-gradient(-180deg, #EBEBEB 0%, #DCDDDF 48%, #C4C5C7 99%); }
+
+
+.milkyWay {
+  background-image: -webkit-linear-gradient(bottom, #F4F4F4 0%, #DFDEDC 100%);
+  background-image: linear-gradient(to top, #F4F4F4 0%, #DFDEDC 100%); }
+  
